Drop native access warning.